--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,3 +1,20 @@
 view {
   box-sizing: border-box;
 }
+
+uni-swiper{
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper{
+  margin: 0 auto;
+  padding: 30rpx;
+  width: 750rpx;
+}
+
+.ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
