--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -2,20 +2,23 @@ view {
   box-sizing: border-box;
 }
 
-uni-swiper{
+uni-swiper {
   width: 100%;
   height: 100%;
 }
 
-.image{
+.image {
   width: 100%;
   height: 100%;
 }
 
-.wrapper{
+.wrapper {
   margin: 0 auto;
   padding: 30rpx;
   width: 750rpx;
+  min-height: 80vh;
+  background: linear-gradient(to bottom, transparent, #ffffff 400rpx),
+    linear-gradient(to right, #beecd8 20%, #f4e2d8);
 }
 
 .ellipsis {
